# Graph-Calculator

./: .gitignore  Auxiliaries.cpp  Auxiliaries.h  CMakeLists.txt  Calc.cpp  Calc.h  CalcExceptions.cpp  CalcExceptions.h  Exceptions.cpp  Exceptions.h  Graph.cpp  Graph.h  GraphCalc.cpp  GraphCalc.h  GraphExceptions.cpp  GraphExceptions.h  Makefile  PyInterface.cpp  PyInterface.h  README.md  final_in.txt  graph.i  graph_wrap.cpp  in.txt  in2.txt  py_test.py  test_in.txt  test_out.txt
